changed sitemap h1 color

--- a/sitemap/sitemap.html
+++ b/sitemap/sitemap.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Style Guide</title>
+    <title>Sitemap</title>
 
     <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap" rel="stylesheet">
