--- a/Merino_Final/MerinoStyleGuide.html
+++ b/Merino_Final/MerinoStyleGuide.html
@@ -4,16 +4,17 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Merino Style Guide</title>
+    <title>Grey Pink</title>
 
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/font.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono,Yeseva+One&display=swap" rel="stylesheet">
 
   </head>
 
   <body>
 
-    <h1>Merino Style Guide</h1>
+    <h1>Grey</h1>
 
     <p>Our company produces the finest sweaters,  crafted with care and woven with Merino wool of the best quality. Delicate, intimate, and cozy, Merino's sweater is a coveted item and makes for a heart-warming gift.</p>
 
@@ -117,7 +118,9 @@
         <code>&lt;h1&gt;Header 1&lt;/h1&gt;</code>
 
         <h3>Rendered element:</h3>
-        <h1 class="h1">Header 1</h1>
+        <h1 class="h1">Header 1 </h1>
+        <h1 class="h1">Grey </h1>
+        <h1 class="h1">Pink </h1>
       </section>
 
       <section>
