--- a/Merino_Final/Merino.html
+++ b/Merino_Final/Merino.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Merino</title>
-    <link href="css/main.css" rel="stylesheet">
-  </head>
+<head>
+<meta charset="utf-8">
+<title>Merino</title>
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/real-page.css">
+<link rel="stylesheet" href="css/fonts.css">
+</head>
 
-  <body>
-  	<!-- Header + Home Nav -->
-  	<div>
-  		<h1>
-  			Merino
-  		</h1>
-  	</div>
+<body>
+<!-- Header + Home Nav -->
+<div>
+<h1>Merino</h1>
+</div>
 
-  	<!-- Main Nav -->
-  	<div>
-  		<h2>
-  			About
-  		</h2>
-  		<h2>
-  			Contact
-  		</h2>
-  		<h2>
-  			Purchases
-  		</h2>
-  	</div>
+<!-- Main Nav -->
+<nav>
+<div class="nav-bar">
+<a class="logo" href="#home">Merino</a>,
+<a href="#about">About</a>,
+<a href="#contact">Contact</a>,
+<a href="#purchases">Purchases</a>,
+</div>
+</nav>
 
-  	<!-- Home Page Content -->
-  	<div>
-  		<h2>
-  			About
-  		</h2>
-  		<h2>
-  			Contact
-  		</h2>
-  		<h2>
-  			Purchases
-  		</h2>
-  	</div>
+<!-- Home Page Content -->
+<div class="product">
+<h2>Product 1 : Grey</h2>
+</div>
 
-  </body>
+<div class="product">
+<h2>Product 2 : Pink</h2>
+</div>
 
- </html>
+<div class="product">
+<h2>Product 3 : Ivory</h2>
+</div>
+
+</body>
+
+</html>
