Update navigation on main Merino page

--- a/Merino_Final/Merino.html
+++ b/Merino_Final/Merino.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Merino Home Page -->
 
 <head>
 <meta charset="utf-8">
@@ -20,9 +21,8 @@
 <nav>
 <div class="nav-bar">
 <a class="logo" href="#home">Merino</a>,
-<a href="#about">About</a>,
-<a href="#contact">Contact</a>,
-<a href="#purchases">Purchases</a>,
+<a href="AboutMerino.html" class="about">About</a>,
+<a href="ContactMerino.html" class="contact">Contact</a>,
 </div>
 </nav>
 
