--- a/Merino_Final/AboutMerino.html
+++ b/Merino_Final/AboutMerino.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+	<section id="info">
 	<h1>Who we are</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique quis quam pretium feugiat. Pellentesque ut ultricies sem. Fusce ultricies leo sem, vel varius sem ullamcorper et. Curabitur luctus leo nec quam laoreet consectetur. Maecenas a mi porttitor, egestas mi ac, cursus eros. Vivamus porttitor et lectus non volutpat. 
 	</p>
@@ -23,6 +24,12 @@
 	<h1>Why we do what we do</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique quis quam pretium feugiat. Pellentesque ut ultricies sem. Fusce ultricies leo sem, vel varius sem ullamcorper et. Curabitur luctus leo nec quam laoreet consectetur. Maecenas a mi porttitor, egestas mi ac, cursus eros. Vivamus porttitor et lectus non volutpat. 
 	</p>
+	</section>
+
+	<section id="info">
+	<h1>Events</h1>
+	</section>
+
 </body>
 
 </html>
