--- a/Merino_Website/Merino.html
+++ b/Merino_Website/Merino.html
@@ -13,31 +13,51 @@
 
 <body>
 <!-- Header + Home Nav -->
-<div>
-<h1>Merino</h1>
-</div>
+<h1>Merino.</h1>
 
 <!-- Main Nav -->
-<nav>
-<div class="nav-bar">
-<a class="logo" href="#home">Merino</a>,
-<a href="AboutMerino.html" class="about">About</a>,
-<a href="ContactMerino.html" class="contact">Contact</a>,
-</div>
-</nav>
+		<nav>
+			<ul>
+				<li><a href="#">Purchase</a></li>
+				<li><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/AboutMerino.html">About</a></li>
+				<li><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/ContactMerino.html">Contact</a></li>
+			</ul>
+		</nav>
 
 <!-- Home Page Content -->
-<div class="product">
-<h2>Product 1 : Grey</h2>
-</div>
 
-<div class="product">
-<h2>Product 2 : Pink</h2>
-</div>
+		<h2 id="arrival">New Arrival</h2>
 
-<div class="product">
-<h2>Product 3 : Ivory</h2>
-</div>
+
+		<h2 id="event">New Event</h2>
+
+		<img id="image" src="img/grey-sweater.jpg">
+
+		<h3 id="collection01">collection</h3>
+		<h3 id="collection02">collection</h3>
+		<h3 id="collection03">collection</h3>
+		<h3 id="collection04">collection</h3>
+		<h3 id="collection05">collection</h3>
+
+		<div id="v-line01"></div>
+
+		<div id="v-line02"></div>
+
+		<div id="h-line01"></div>
+
+		<div id="h-line02"></div>
+
+		<div id="h-line03"></div>
+
+		<div id="h-line04"></div>
+
+		<div id="h-line05"></div>
+		<div id="h-line06"></div>
+		<div id="h-line07"></div>
+		<div id="h-line08"></div>
+
+
+		<h4>FOOTER</h4>
 
 </body>
 
