Update Home page

--- a/Merino_Website/ContactMerino.html
+++ b/Merino_Website/ContactMerino.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <title>Contact Merino</title>
 <link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
+<!-- <link rel="stylesheet" href="css/main.css"> -->
 <link rel="stylesheet" href="css/real-page.css">
 <link rel="stylesheet" href="css/fonts.css">
 </head>
