--- a/Merino_Website/Merino.html
+++ b/Merino_Website/Merino.html
@@ -11,54 +11,43 @@
 <link rel="stylesheet" href="css/fonts.css">
 </head>
 
-<body>
-<!-- Header + Home Nav -->
-<h1>Merino.</h1>
 
-<!-- Main Nav -->
-		<nav>
-			<ul>
-				<li><a href="#">Purchase</a></li>
-				<li><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/AboutMerino.html">About</a></li>
-				<li><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/ContactMerino.html">Contact</a></li>
-			</ul>
-		</nav>
+	<body> 
+	<!-- Header + Home Nav -->
+	<div class="wrapper">
+		<div class="header">
+			<h1>Merino.</h1>
+	<!-- Main Nav -->
+	<!-- Home Page Content -->
 
-<!-- Home Page Content -->
-
-		<h2 id="arrival">New Arrival</h2>
-
-
-		<h2 id="event">New Event</h2>
-
-		<img id="image" src="img/grey-sweater.jpg">
-
-		<h3 id="collection01">collection</h3>
-		<h3 id="collection02">collection</h3>
-		<h3 id="collection03">collection</h3>
-		<h3 id="collection04">collection</h3>
-		<h3 id="collection05">collection</h3>
-
-		<div id="v-line01"></div>
-
-		<div id="v-line02"></div>
-
-		<div id="h-line01"></div>
-
-		<div id="h-line02"></div>
-
-		<div id="h-line03"></div>
-
-		<div id="h-line04"></div>
-
-		<div id="h-line05"></div>
-		<div id="h-line06"></div>
-		<div id="h-line07"></div>
-		<div id="h-line08"></div>
+		</div>
+		<div class="body">
+			<div class="new"><p >NEW ARRIVAL</p></div>
+			<div class="event"><p >20% OFF</p></div>
+			<div class="collection">
+				<div class="drawer">
+					<p class="text">2019 Summer Collection</p>
+				</div>
+				<div class="drawer"><p class="text">2019 SUMMER COLLECTION</p></div>
+				<div class="drawer"><p class="text">2019 Fall Collection</p></div>
+				<div class="drawer"><p class="text">2018 Spring Collection</p></div>
+				<div class="drawer"><p class="text">BLUE BLUE BLUE</p></div>
+				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
+				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
+				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
+				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
+			</div>
+		</div>
+	</div>
 
 
-		<h4>FOOTER</h4>
 
-</body>
+	<div class="footer"><p class="text">FOOTER</p></div>
+
+
+
+
+
+	</body>
 
 </html>
