Update home color

--- a/Merino_Website/Merino.html
+++ b/Merino_Website/Merino.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Merino Home Page -->
 
-<head>
-<meta charset="utf-8">
-<title>Merino</title>
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/real-page.css">
-<link rel="stylesheet" href="css/fonts.css">
-</head>
+	<head>
 
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Merino.</title>
+		<link rel="stylesheet" href="css/normalize.css"/>
+		<link rel="stylesheet" href="css/main.css"/>
+		<link rel="stylesheet" href="css/fonts.css"/>
+		<link rel="stylesheet" href="css/flexbox.css">
+
+	</head>
 
 	<body> 
 	<!-- Header + Home Nav -->
@@ -18,12 +19,17 @@
 		<div class="header">
 			<h1>Merino.</h1>
 	<!-- Main Nav -->
+
+	
 	<!-- Home Page Content -->
 
 		</div>
 		<div class="body">
-			<div class="new"><p >NEW ARRIVAL</p></div>
-			<div class="event"><p >20% OFF</p></div>
+			<div class="new">
+				<p class="title">NEW ARRIVAL</p>
+				<img src="img/grey-sweater.jpg">
+			</div>
+			<div class="event"><p class="title">20% OFF</p></div>
 			<div class="collection">
 				<div class="drawer">
 					<p class="text">2019 Summer Collection</p>
@@ -49,5 +55,4 @@
 
 
 	</body>
-
 </html>
