Update Style Guide

--- a/Merino_Final/MerinoStyleGuide.html
+++ b/Merino_Final/MerinoStyleGuide.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Grey Pink</title>
+    <title>Style Guide</title>
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/font.css" rel="stylesheet">
@@ -14,7 +14,7 @@
 
   <body>
 
-    <h1>Grey</h1>
+    <h1>Merino</h1>
 
     <p>Our company produces the finest sweaters,  crafted with care and woven with Merino wool of the best quality. Delicate, intimate, and cozy, Merino's sweater is a coveted item and makes for a heart-warming gift.</p>
 
