Update About page

--- a/Merino_Website/AboutMerino.html
+++ b/Merino_Website/AboutMerino.html
@@ -14,7 +14,7 @@
 <body>
 	<section id="info">
 	<h1>Who we are</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique quis quam pretium feugiat. Pellentesque ut ultricies sem. Fusce ultricies leo sem, vel varius sem ullamcorper et. Curabitur luctus leo nec quam laoreet consectetur. Maecenas a mi porttitor, egestas mi ac, cursus eros. Vivamus porttitor et lectus non volutpat. 
+	<p>Proudly Australian, we are a company built on a set of core values and guiding principles that support our local wool-growers’ businesses. We are committed to providing the finest sweaters, crafted with Australia’s best Merino wool, coveted for its natural softness, breathability, insulation and versatility. 
 	</p>
 
 	<h1>What we do</h1>
