Add content copy for About page

--- a/Merino_Website/AboutMerino.html
+++ b/Merino_Website/AboutMerino.html
@@ -17,17 +17,15 @@
 	<p>Proudly Australian, we are a company built on a set of core values and guiding principles that support our local wool-growers’ businesses. We are committed to providing the finest sweaters, crafted with Australia’s best Merino wool, coveted for its natural softness, breathability, insulation and versatility. 
 	</p>
 
-	<h1>What we do</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique quis quam pretium feugiat. Pellentesque ut ultricies sem. Fusce ultricies leo sem, vel varius sem ullamcorper et. Curabitur luctus leo nec quam laoreet consectetur. Maecenas a mi porttitor, egestas mi ac, cursus eros. Vivamus porttitor et lectus non volutpat. 
-	</p>
+	<h1>Get in touch</h1>
+	<p>Say hello, ask us anything, we’ll be happy to respond. Contact us here if you have questions or want to learn more about us and our products.</p>
 
-	<h1>Why we do what we do</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique quis quam pretium feugiat. Pellentesque ut ultricies sem. Fusce ultricies leo sem, vel varius sem ullamcorper et. Curabitur luctus leo nec quam laoreet consectetur. Maecenas a mi porttitor, egestas mi ac, cursus eros. Vivamus porttitor et lectus non volutpat. 
-	</p>
-	</section>
-
-	<section id="info">
-	<h1>Events</h1>
+	<form action="/action_page.php" id="usrform">
+  	Name <input type="text" name="usrname">
+  	E-mail <input type="text" name="email">
+	<textarea name="comment" form="usrform">Enter message here...</textarea> 
+	<input type="submit">
+	</form>
 	</section>
 
 </body>
