Update Home Page

--- a/Merino_Website/Merino.html
+++ b/Merino_Website/Merino.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Merino.</title>
+		<title>Flexbox demo</title>
 		<link rel="stylesheet" href="css/normalize.css"/>
 		<link rel="stylesheet" href="css/main.css"/>
 		<link rel="stylesheet" href="css/fonts.css"/>
@@ -13,17 +13,25 @@
 
 	</head>
 
-	<body> 
+	<body class="home-body"> 
 	<!-- Header + Home Nav -->
-	<div class="wrapper">
-		<div class="header">
-			<h1>Merino.</h1>
-	<!-- Main Nav -->
+	<div class='header-container'>
+
+		<h1 class='header-title'>Merino.</h1>
+		<nav class='header-nav-container'>
+			<ul class='header-nav-ul'>
+				<li class='nav-item'><a class='nav-a' href="#">EVENT</a></li>
+				<li class='nav-item'><a class='nav-a' href="#">PURCHASE</a></li>
+				<li class='nav-item'><a class='nav-a' href="#">ABOUT</a></li>
+			</ul>
+		</nav>
+
+	</div>
 
 	
 	<!-- Home Page Content -->
 
-		</div>
+
 		<div class="body">
 			<div class="new">
 				<p class="title">NEW ARRIVAL</p>
@@ -42,9 +50,10 @@
 				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
 				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
 				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
+				
 			</div>
 		</div>
-	</div>
+	
 
 
 
