--- a/Merino_Website/Merino.html
+++ b/Merino_Website/Merino.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/main.css"/>
 		<link rel="stylesheet" href="css/fonts.css"/>
 		<link rel="stylesheet" href="css/flexbox.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 	</head>
 
@@ -37,7 +38,7 @@
 				<p class="title">NEW ARRIVAL</p>
 				<img src="img/grey-sweater.jpg">
 			</div>
-			<div class="event"><p class="title">20% OFF</p></div>
+			
 			<div class="collection">
 				<div class="drawer">
 					<p class="text">2019 Summer Collection</p>
