--- a/Merino_Website/Merino.html
+++ b/Merino_Website/Merino.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Flexbox demo</title>
+		<title>Merino.</title>
 		<link rel="stylesheet" href="css/normalize.css"/>
 		<link rel="stylesheet" href="css/main.css"/>
 		<link rel="stylesheet" href="css/fonts.css"/>
@@ -23,7 +23,7 @@
 			<ul class='header-nav-ul'>
 				<li class='nav-item'><a class='nav-a' href="#">EVENT</a></li>
 				<li class='nav-item'><a class='nav-a' href="#">PURCHASE</a></li>
-				<li class='nav-item'><a class='nav-a' href="#">ABOUT</a></li>
+				<li class='nav-item'><a class='nav-a' href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/About%20Page/aboutus.html">ABOUT</a></li>
 			</ul>
 		</nav>
 
@@ -40,22 +40,16 @@
 			</div>
 			
 			<div class="collection">
-				<div class="drawer">
-					<p class="text">2019 Summer Collection</p>
-				</div>
-				<div class="drawer"><p class="text">2019 SUMMER COLLECTION</p></div>
-				<div class="drawer"><p class="text">2019 Fall Collection</p></div>
-				<div class="drawer"><p class="text">2018 Spring Collection</p></div>
-				<div class="drawer"><p class="text">BLUE BLUE BLUE</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
-				<div class="drawer"><p class="text">2019 Summer Collection</p></div>
+			
+				<div class="drawer"><p class="text">006. Black</p></div>
+				<div class="drawer"><p class="text">005. White</p></div>
+				<div class="drawer"><p class="text">004. Ivory</p></div>
+				<div class="drawer"><p class="text">003. Dark Grey</p></div>
+				<div class="drawer"><p class="text">002. Grey</p></div>
+				<div class="drawer"><p class="text">001. Light Grey</p></div>
+			
+
+
 				
 			</div>
 		</div>
