Update styleguide according to new page changes

--- a/Merino_Final/MerinoStyleGuide.html
+++ b/Merino_Final/MerinoStyleGuide.html
@@ -16,8 +16,6 @@
 
     <h1>Merino</h1>
 
-    <p>Our company produces the finest sweaters,  crafted with care and woven with Merino wool of the best quality. Delicate, intimate, and cozy, Merino's sweater is a coveted item and makes for a heart-warming gift.</p>
-
 
     <nav>
       
@@ -119,8 +117,6 @@
 
         <h3>Rendered element:</h3>
         <h1 class="h1">Header 1 </h1>
-        <h1 class="h1">Grey </h1>
-        <h1 class="h1">Pink </h1>
       </section>
 
       <section>
@@ -224,7 +220,7 @@
 
         <nav>
           <a class="main-nav" href="#">
-          <h1>Logo Header</h1>
+          <h1>Merino.</h1>
           </a>
         </nav>
 
@@ -329,13 +325,13 @@
           </div> 
 
           <div class="box" id="color-box">
-          <p>#F0E5DE</p>
-          <p>Soft pink color</p>
+          <p>#C4C4C4</p>
+          <p>Dak grey color</p>
           </div> 
 
           <div class="box" id="color-box2">
-          <p>#B18C64</p>
-          <p>Accent brown color</p>
+          <p>#F7F6FB</p>
+          <p>Light grey colorr</p>
           </div> 
 
           <div class="box" id="black-box">
