Update styleguide html

--- a/Merino_Final/MerinoStyleGuide.html
+++ b/Merino_Final/MerinoStyleGuide.html
@@ -8,7 +8,8 @@
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/font.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono,Yeseva+One&display=swap" rel="stylesheet">
+   <!--  <link href="https://fonts.googleapis.com/css?family=Space+Mono,Yeseva+One&display=swap" rel="stylesheet"> -->
+    <link href= "https://fonts.googleapis.com/css?family=Roboto:300,500&display=swap" rel="stylesheet"> 
 
   </head>
 
@@ -31,7 +32,7 @@
         <div>
         <a href="MerinoStyleGuide.html" class="StyleGuide">Style Guide</a>,
         <a href="Citations.html" class="Citations">Citations</a>,
-        <a href="Wireframes.html" class="Wireframes">Wireframe Prorotypes</a>
+        <a href="Wireframes.html" class="Wireframes">Wireframe Prototypes</a>
         </div>
     </nav>
 
@@ -41,7 +42,7 @@
     <section id="interactive_elements">
 
       <!-- Default Button styling section -->
-     <h1>Interactive Elements:</h1>
+     <h2>Interactive Elements:</h2>
 
       <section>
         <h2>In-text link</h2>
@@ -90,10 +91,10 @@
         <p>input</p>
 
         <h3>Sample code:</h3>
-        <code>&lt;input class="input-text-default" type="text" name="name"&gt;</code>
+        <code>&lt;input class="input-text-default" type="text" name="name" placeholder="Name"&gt;</code>
 
         <h3>Rendered element:</h3>
-        <input class="input-text-default" type="text" name="name">
+        <input class="input-text-default" type="text" name="name" placeholder="Name">
       </section>
 
     </section>
@@ -104,7 +105,7 @@
     <!-- TEXT ELEMENTS SECTION // -->
     <section id="text_elements">
 
-    <h1>Text Elements:</h1>
+    <h2>Text Elements:</h2>
 
       <section>
         <h2>Headings</h2>
@@ -116,7 +117,7 @@
         <code>&lt;h1&gt;Header 1&lt;/h1&gt;</code>
 
         <h3>Rendered element:</h3>
-        <h1 class="h1">Header 1 </h1>
+        <h2 class="h1">Header 1 </h2>
       </section>
 
       <section>
@@ -202,7 +203,7 @@
     <!-- COMBINED ELEMENTS SECTION // -->
     <section id="combined_elements">
 
-    <h1>Combined Elements:</h1>
+    <h2>Combined Elements:</h2>
 
       <section>
         <h2>Main Navigation</h2>
@@ -226,9 +227,9 @@
 
 
         <h3>Navigation</h3>
-        <a class="sub-nav" href="#">Page1</a>
-        <a class="sub-nav" href="#">Page2</a>
-        <a class="sub-nav" href="#">Page3</a>
+        <a class="sub-nav" href="#">PAGE 1</a>
+        <a class="sub-nav" href="#">PAGE 2</a>
+        <a class="sub-nav" href="#">PAGE 3</a>
       </section>
 
       <section>
@@ -331,7 +332,7 @@
 
           <div class="box" id="color-box2">
           <p>#F7F6FB</p>
-          <p>Light grey colorr</p>
+          <p>Light grey color</p>
           </div> 
 
           <div class="box" id="black-box">
