Update citation page

--- a/Merino_Final/Citations.html
+++ b/Merino_Final/Citations.html
@@ -1,3 +1,17 @@
+<!-- 
+
+    Made by:
+      
+   \(▔＾▔)/        \(^——^)/
+
+  Amiko Tong  &  Nadia Yonata
+    
+
+
+
+  For IAT 339 course group project. 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +26,7 @@
   </head>
 
   <body>
-
+  <!-- Citation page -->
     <h1>Merino Citations</h1>
 
     <a href="MerinoStyleGuide.html" class="StyleGuide">Style Guide</a>
@@ -21,11 +35,13 @@
 
     <a href="Wireframes.html" class="Wireframes">Wireframe Prorotypes</a>
 
-    <p>Code as learned from IAT 339 lectures,</p> 
-    <p>https://www.w3schools.com/cssref/css_selectors.asp</p>
-    <p>Special thanks for the help to Tim and Loo</p>
-    <p>All fonts courtesy of Google Fonts</p>
-    <p>Prototyped on Figma</p>
+    <ul>
+      <li>Code as learned from IAT 339 lectures.</li>
+      <li>Code references from W3School: <a href="https://www.w3schools.com">"https://www.w3schools.com"</a>
+      <li>Special thanks for the help to Jordan, Tim and Loo.</li>
+      <li>All fonts retrieved from Google Fonts: <a href="https://fonts.google.com/">"https://fonts.google.com"</a></li>
+      <li>Prototyped on Figma:<a href="https://www.figma.com/">"https://www.figma.com/"</a></li>
+    </ul>
 
   </body>
 </html>
