Update citation page

--- a/Merino_Final/Citations.html
+++ b/Merino_Final/Citations.html
@@ -29,11 +29,11 @@
   <!-- Citation page -->
     <h1>Merino Citations</h1>
 
-    <a href="MerinoStyleGuide.html" class="StyleGuide">Style Guide</a>
+    <a href="MerinoStyleGuide.html" class="StyleGuide">Style Guide   |</a>
 
-    <a href="Citations.html" class="Citations">Citations</a>
+    <a href="Citations.html" class="Citations">Citations   |</a>
 
-    <a href="Wireframes.html" class="Wireframes">Wireframe Prorotypes</a>
+    <a href="Wireframes.html" class="Wireframes">Wireframe Prototypes</a>
 
     <ul>
       <li>Code as learned from IAT 339 lectures.</li>
