Update Merino home page

--- a/Merino_Website/home.html
+++ b/Merino_Website/home.html
@@ -10,7 +10,7 @@
 
 
  	For IAT 339 course group project. 
- 	Used ... resource or code from ...
+ 	
 
 -->
 <!DOCTYPE html>
@@ -32,16 +32,16 @@
 	<div class='header'>
 		
         <div class="header-title">
-        	<p class="header-title-text"><a class="header-title" href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/home.html">Merino.</a></p>
+        	<p class="header-title-text"><a class="header-title" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/home.html">Merino.</a></p>
         </div><!-- Logo -->
 
 		<!-- Nav start-->
 		<div class="header-nav-container">
 			<nav >
 				<ul class="header-nav-ul">
-					<li class="nav-item"><a class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/purchases.html">Purchases</a></li>
-					<li class="nav-item"><a  class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/event.html">Events</a></li>
-					<li class="nav-item"><a  class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/aboutus.html">About</a></li>
+					<li class="nav-item"><a class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/purchases.html">Purchases</a></li>
+					<li class="nav-item"><a  class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/event.html">Events</a></li>
+					<li class="nav-item"><a  class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/aboutus.html">About</a></li>
 				</ul>
 			</nav>
 
@@ -57,7 +57,7 @@
 
 	<div class="body">
 		<div class="display">
-			<div class="display-top"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/event.html">Events: // Mono --- Knitting class with our experts 12. 18. 2019. //</a></div>
+			<div class="display-top"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/event.html">Events: // Mono --- Knitting class with our experts 12. 18. 2019. //</a></div>
 			
 			<div class="display-middle">
 				<img class ="event-img" alt="" src="img/result.jpg">
@@ -66,57 +66,60 @@
 			<!-- Footer -->
 			<div class="footer">
 						
-				<div class="style-guide"><a class="footer-a" href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Final/MerinoStyleGuide.html">STYLE GUIDE</a></div>
-				<div class="citation"><a class="footer-a" href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Final/Citations.html">CITATION</a></div>
+				<div class="style-guide"><a class="footer-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Footer_Links/MerinoStyleGuide.html">STYLE GUIDE</a></div>
+				<div class="citation"><a class="footer-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Footer_Links/Citations.html">CITATION</a></div>
 				<div class="git-repo"><a class="footer-a" href="https://github.com/nyonata/project2">GIT REPOSITORY</a></div>
 			</div>
 			<!-- Footer End-->
 			
 			
 		</div>
-		
-
-
 
 		<div class="collection">
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">016. Grey</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">016. Grey</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">015. Light Grey</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">015. Light Grey</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">014. Bone Ivory</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">014. Bone Ivory</a></div>
 
-			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">013. Dark Grey</a></div>
+			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">013. Dark Grey</a></div>
 
-			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">012. Baby Pink</a></div>
+			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">012. Baby Pink</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">011. Army Green</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">011. Army Green</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">010. Black</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">010. Black</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">009. Snow</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">009. Snow</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">008. Alabaster</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">008. Alabaster</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">007. Linen</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">007. Linen</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">006. Hazel Brown</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">006. Hazel Brown</a></div>
 
-			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">005. Mustard Yellow</a></div>
+			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">005. Mustard Yellow</a></div>
 
-			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">004. Orange Marmalade</a></div>
+			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">004. Orange Marmalade</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">003. Dark Green</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">003. Dark Green</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">002. Violet</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">002. Violet</a></div>
 
-			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/product-grey.html">001. Navy</a></div>
+			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">001. Navy</a></div>
 
 			
 
 
 			
 		</div>
+		
+
+
+
+
+
 	</div>
 
 
