Update product page, image now showing

--- a/Merino_Website/product-grey.html
+++ b/Merino_Website/product-grey.html
@@ -65,7 +65,7 @@
  			
  			<div class="display-middle">
  				<div class="display-middle-left">
- 					<img class ="grey-img" alt="" src="img/grey.jpg">
+ 					<img class ="grey-img" alt="" src="img/grey-sweater.jpg">
  				</div>
  				<div class="display-middle-right">
  					<div class="display-content">
