Update purchase page, image now showing

--- a/Merino_Website/purchases.html
+++ b/Merino_Website/purchases.html
@@ -67,7 +67,7 @@
  			</div>
 
  			<div class="display-top-2">
- 				<div class="col-1"><img class ="product-img" alt="" src="img/grey.jpg"></div>
+ 				<div class="col-1"><img class ="product-img" alt="" src="img/grey-sweater.jpg"></div>
  				<div class="col-2"> <p class="product-text">016. Grey Merino</p></div>
  				<div class="col-3"><p class="product-text">&lt; M &gt;</p></div>
  				<div class="col-4"><p class="product-text">- 1 +</p></div>
