Update confirm.html page with title (Merino : Confirm)

--- a/Merino_Website/confirm.html
+++ b/Merino_Website/confirm.html
@@ -5,13 +5,8 @@
  	 \(▔＾▔)/        \(^——^)/
 
  	Amiko Tong  &  Nadia Yonata
- 		
-
-
-
  	For IAT 339 course group project. 
  	
-
  -->
  <!DOCTYPE html>
  <html lang="en">
@@ -20,7 +15,7 @@
 
  	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
- 	<title>Merino.</title>
+ 	<title>Merino : Confirm</title>
  	<link rel="stylesheet" href="css/confirm.css"/>
  	<link rel="stylesheet" href="css/fonts.css"/>
 
