Add link to buttons for puchases.html

--- a/Merino_Website/purchases.html
+++ b/Merino_Website/purchases.html
@@ -5,13 +5,8 @@
  	 \(▔＾▔)/        \(^——^)/
 
  	Amiko Tong  &  Nadia Yonata
- 		
-
-
-
  	For IAT 339 course group project. 
- 	Used ... resource or code from ...
-
+ 	
  -->
  <!DOCTYPE html>
  <html lang="en">
@@ -20,7 +15,7 @@
 
  	<meta charset="utf-8">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
- 	<title>Merino.</title>
+ 	<title>Merino : Purchases</title>
  	<link rel="stylesheet" href="css/purchases.css"/>
  	<link rel="stylesheet" href="css/fonts.css"/>
 
@@ -125,7 +120,11 @@
 
  			<div class="display-bottom">
  				 	<div class="col-15"></div>
- 					<div class="col-16"><div class="button">Confirm</div></div>
+ 					<div class="col-16">
+ 						<div class="button">
+ 						<a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/confirm.html">Confirm
+ 						</div>
+ 					</div>
  					<div class="col-17"></div>
  			</div>
 
