--- a/Merino_Website/home.html
+++ b/Merino_Website/home.html
@@ -5,14 +5,9 @@
  	 \(▔＾▔)/        \(^——^)/
 
  	Amiko Tong  &  Nadia Yonata
- 		
-
-
-
  	For IAT 339 course group project. 
  	
-
--->
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,7 +15,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Merino.</title>
+	<title>Merino : Home</title>
 	<link rel="stylesheet" href="css/home.css"/>
 	<link rel="stylesheet" href="css/fonts.css"/>
 	
@@ -77,13 +72,15 @@
 
 		<div class="collection">
 
+			<!-- 2 active products : 016. Grey and 013. Dark Grey -->
+
 			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">016. Grey</a></div>
 
 			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">015. Light Grey</a></div>
 
 			<div class="drawer"><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">014. Bone Ivory</a></div>
 
-			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">013. Dark Grey</a></div>
+			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-dark-grey.html">013. Dark Grey</a></div>
 
 			<div class="drawer" ><a href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/product-grey.html">012. Baby Pink</a></div>
 
