Update proper title for event page

--- a/Merino_Website/event.html
+++ b/Merino_Website/event.html
@@ -20,7 +20,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Merino Events</title>
+	<title>Merino : Events</title>
 	<link rel="stylesheet" href="css/event.css"/>
 	<link rel="stylesheet" href="css/fonts.css"/>
 	
