Update proper title for about page

--- a/Merino_Website/aboutus.html
+++ b/Merino_Website/aboutus.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>About us</title>
+	<title>Merino : About</title>
 	<link rel="stylesheet" href="css/_aboutus.css" />
 	<link rel="stylesheet" href="css/_normalize.css" />
 		<link src="">
@@ -29,7 +29,7 @@
 		<!-- Header + Home Nav -->
 	<div class='header-container'>
 
-		<h1 class='header-title'>Merino.</h1>
+		<h1 class='header-title'>Merino</h1>
 		<nav class='header-nav-container'>
 			<ul class='header-nav-ul'>
 				<li class='nav-item'><a class='nav-a' href="#">EVENT</a></li>
