--- a/Merino_Website/product-dark-grey.html
+++ b/Merino_Website/product-dark-grey.html
@@ -108,7 +108,7 @@
  					<div class="display-review">
  						<div class="body-right-bottom-title">Reviews</div>
  						<div class="body-right-bottom-box">
- 							<textarea class="box" name="revies"> Enter reviews here...</textarea>
+ 							<textarea class="box" name="revies" placeholder="Enter reviews here"></textarea>
  						</div>
  						<div class="body-right-bottom-button">
  							<div class="button">Leave a review</div>
