Update several files
- aboutus.css
- event.css
- product.css
- product-dark-grey.html
- product-grey.html
- script/about-us.js

--- a/Merino_Website/product-dark-grey.html
+++ b/Merino_Website/product-dark-grey.html
@@ -45,7 +45,7 @@
  				<ul class="header-nav-ul">
  					<li class="nav-item"><a class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/purchases.html">Purchases</a></li>
  					<li class="nav-item"><a  class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/event.html">Events</a></li>
- 					<li class="nav-item"><a  class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/group/Merino_Website/aboutus.html">About</a></li>
+ 					<li class="nav-item"><a  class="nav-a" href="https://www.sfu.ca/~amikot/IAT339/PO2:%20Company/Merino_Website/aboutus.html">About</a></li>
  				</ul>
  			</nav>
 
